--- a/style.css
+++ b/style.css
@@ -1,39 +1,21 @@
-body{
-    aspect-ratio: 16 / 9;
-    margin: 0;
+body{    
+    margin: 0;    
+    overflow: hidden;        
 }
 
 .flex-container {
-    display: flex;
+    display: flex;      
 }
 
-#canvas {          
-    width: 1920px;
-    height: 1080px;
-    background-color: aqua;
+#canva { 
+    height: 100vh;
 }
 
-#screen {    
-    width: 1600px;
-    height: 900px;  
-    background-color:black;
-}
-
-#side-panel {      
-    flex-direction: column;
-    flex: 1;        
-    background-color: brown;
-}
-
-#camera {
-    aspect-ratio: 16 / 9;        
-    background-color:blue;    
+#side-panel {        
+    height: 100%;
 }
 
 #chat {
-    flex-direction: column;
-    flex: 1;
-    border: none;
-    background-color: blueviolet;
+    height: 100%;
+    border: none;    
 }
-
