--- a/style.css
+++ b/style.css
@@ -4,16 +4,27 @@ body{
 }
 
 #canva{
-    width: 100%;
+    height: 100vh;
+    display: flex;    
 }
 
 .container {
-    display: flex;    
-    flex-grow: 1;
+    display: flex;   
+    flex: 0 0 100%;  
+}
+
+#chat {
+    flex: 0 0 30%;
+    border: none;
+}
+
+#alerts {
+    flex-grow: 1; 
+    border: none;
 }
 
 iframe {
-    display: flex;
-    flex-grow: 1;
-    border: none;    
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
