--- a/style.css
+++ b/style.css
@@ -8,13 +8,12 @@ body{
     display: flex;    
 }
 
-.container {
-    display: flex;   
-    flex: 0 0 100%;  
+.flex {
+    display: flex;
 }
 
 #chat {
-    flex: 0 0 30%;    
+    flex-basis: 30%;    
 }
 
 #alerts {
@@ -24,6 +23,5 @@ body{
 iframe {
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
     border: none;
 }
